objects/vlocity_ins__RelationshipGraphTraversal__c.object
<CustomObject>
    <description>Metadata that defines a relationship between a source object and a target object. An Id reference from the target to the source defines a one-to-many relationship between source and target. A relationship object, either custom or PartyRelationship__c, defines a many-to-many relationship.</description>
    <fields>
        <fullName>vlocity_ins__CommentField__c</fullName>
        <description>Field in the relationship object that stores comments.</description>
        <label>Comment Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultStrengthValue__c</fullName>
        <description>Default strength value. Used when Strength Field is not defined.</description>
        <label>Default Strength Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndDateField__c</fullName>
        <description>Field that stores the date the relationship ended.</description>
        <label>End Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FieldList__c</fullName>
        <description>JSON code that lists other fields to fetch from the relationship object.</description>
        <label>Field List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>Data pack support</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__GraphId__c</fullName>
        <description>Id of the relationship graph to which this traversal definition belongs.</description>
        <label>Relationship Graph</label>
        <referenceTo>vlocity_ins__RelationshipGraph__c</referenceTo>
        <relationshipLabel>Relationship Graph Traversals</relationshipLabel>
        <relationshipName>RelationshipGraphTraversals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InfluenceScoreField__c</fullName>
        <description>Field that measures the level of influence of the relationship.</description>
        <label>Influence Score Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipObject__c</fullName>
        <description>Name of the relationship object, a Party Relationship or Custom Junction object, which defines a many-to-many relationship.</description>
        <label>Relationship Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipTypeField__c</fullName>
        <description>Field in the Party Relationship object that references the Id of the Party Relationship Type object.</description>
        <label>Relationship Type Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipTypeValue__c</fullName>
        <description>Id of the object that defines the relationship type. For the Vlocity Party Model, this is the Id of a PartyRelationshipType__c object. Required if Relationship Type Field is defined.</description>
        <label>Relationship Type Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RoleField__c</fullName>
        <description>Field in the relationship object that specifies the relationship role name.</description>
        <label>Role Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceLabelField__c</fullName>
        <description>Field in the relationship object or Party Relationship Type that labels the primary role.</description>
        <label>Source Label Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceLabel__c</fullName>
        <description>Source object label for this traversal.</description>
        <label>Source Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceObjectApiName__c</fullName>
        <description>Object type for the primary role in the traversal.</description>
        <label>Source Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceObjectField__c</fullName>
        <description>Field in the relationship object that references the Id of the source object. Required if Relationship Object is defined.</description>
        <label>Source Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartDateField__c</fullName>
        <description>Field that stores the date the relationship began.</description>
        <label>Start Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StrengthField__c</fullName>
        <description>Field that measures the strength of the relationship.</description>
        <label>Strength Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetLabelField__c</fullName>
        <description>Field in the relationship object or Party Relationship Type that labels the secondary role.</description>
        <label>Target Label Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetLabel__c</fullName>
        <description>Target object label for this traversal.</description>
        <label>Target Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetObjectApiName__c</fullName>
        <description>Object type for the primary role in the traversal.</description>
        <label>Target Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetObjectField__c</fullName>
        <description>For one-to-many, the field in the target object that references the Id of the source object. For many-to-many, the field in the relationship object that references the Id of the target object.</description>
        <label>Target Object Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Relationship Graph Traversal</label>
    <nameField>
        <label>Relationship Graph Traversal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Graph Traversals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>